styles/globals.css
:root {
  --white: rgb(255, 255, 255);
  --grey-100: rgb(245, 245, 245);
  --grey-200: rgb(229, 229, 229);
  --brown-100: #edc070;
  --brown-900: #825723;
  --ff-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol";
  --blue: #1967d2;
  --yellow: rgb(255, 204, 0);
  --radius: 0.375rem;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

html {
  box-sizing: border-box;
  height: 100%;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  background-color: var(--grey-100);
  height: 100%;
}



.table {
  width: 80%;
  margin: auto;
  border-collapse: collapse;
}

table,
td,
th {
  text-align: left;
}

.content {
  margin-left: auto;
  margin-right: auto;
  max-width: 800px;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto 1fr auto;
}

.Section__article {
  font-family: var(--ff-sans-serif);
  font-size: 20px;
  line-height: 30px;
  background-color: var(--white);
  padding: 1rem;
}

@media screen and (min-width: 800px) {
  .Section__article {
    font-family: var(--ff-sans-serif);
    font-size: 20px;
    line-height: 30px;
    background-color: var(--white);
    padding: 1rem 3.75rem;
    box-shadow: 8px 8px 0 rgba(32, 33, 37, 0.1);
    border-radius: Max(
        0px,
        Min(var(--radius), calc((100vw - 4px - 100%) * 9999))
      ) / var(--radius);
  }
}
.Heading__title {
  font-family: var(--ff-sans-serif);
  font-size: 48px;
  font-weight: 800;
  line-height: 60px;
}

.Button {
  background-color: var(--blue);
  border-radius: Max(0px, Min(var(--radius), calc((100vw - 4px - 100%) * 9999))) /
    var(--radius);
  box-shadow: 8px 8px 0 rgba(32, 33, 37, 0.1);
  padding: 1rem 2rem;
  color: var(--white);
  border: none;
  font-family: var(--ff-sans-serif);
  font-size: 1.5rem;
}

/* math notation */

.Equation {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 15rem;
}

.group {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.group > .den {
  border-top: solid 1px black;
  padding: 0 2px;
}

/* utils */

.sr-only {
  border: 0 !important;
  clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
  -webkit-clip-path: inset(50%) !important;
  clip-path: inset(50%) !important; /* 2 */
  height: 1px !important;
  margin: -1px !important;
  overflow: hidden !important;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
  white-space: nowrap !important; /* 3 */
}

.blue {
  color: var(--blue);
}

.text-xs {
  font-size: 0.75rem; /* 12px */
  line-height: 1rem; /* 16px */
}
.text-sm {
  font-size: 0.875rem; /* 14px */
  line-height: 1.25rem; /* 20px */
}
.text-base {
  font-size: 1rem; /* 1 }6px */
  line-height: 1.5rem; /* 24px */
}
.text-lg {
  font-size: 1.125rem; /* 18px */
  line-height: 1.75rem; /* 28px */
}
.text-xl {
  font-size: 1.25rem; /*  }20px */
  line-height: 1.75rem; /* 28px */
}
.text-2xl {
  font-size: 1.5rem; /* 2 }4px */
  line-height: 2rem; /* 32px */
}
.text-3xl {
  font-size: 1.875rem; /* 30px */
  line-height: 2.25rem; /* 36px */
}
.text-4xl {
  font-size: 2.25rem; /*  }36px */
  line-height: 2.5rem; /* 40px */
}
.text-5xl {
  font-size: 3rem; /* 48 }px */
  line-height: 1;
}
.text-6xl {
  font-size: 3.75rem; /* 60px */
  line-height: 1;
}
.text-7xl {
  font-size: 4.5rem; /* 72px */
  line-height: 1;
}
.text-8xl {
  font-size: 6rem; /* 96px */
  line-height: 1;
}
.text-9xl {
  font-size: 8rem; /* 128px */
  line-height: 1;
}

.pl-4 {
  padding-left: 1rem;
}

@media screen and (min-width: 800px) {
  .pl-4 {
    padding-left: 4rem;
  }
}

